1998-10-19  Jim Kingdon

	* lock.c (lock_name): Set the permissions on each directory we
	create to that of the parent directory.
	* sanity.sh (lockfiles): New chmod and tests lockfiles-7a and
	lockfiles-7b test for this.  Adjust lockfiles-5 for new text of
	error message.

1998-10-15  Jim Kingdon

	* server.c (requests): Set RQ_ROOTLESS for "Set".
	* sanity.sh (info): Also clean up $HOME/.cvsrc.
	(server): Test that we can send Set before Root (had been tested
	by crerepos-6b, but only if you ran the info test first).  Tests
	for this fix.

1998-10-14  Jim Kingdon

	* subr.c (expand_string): Tweak the algorithm so that the size
	that it allocates is generally a power of two.

1998-10-14  Eivind Eklund and Jim Kingdon

	* commit.c (commit): For the client, don't worry about whether we
	are root.

1998-10-13  Jim Kingdon

	* server.h (struct request): Change status field to flags and add
	RQ_ROOTLESS.
	* client.c (handle_valid_requests, supported_request): Change
	status to flags.
	* server.c (requests): Change status to flags.  Add RQ_ROOTLESS.
	* server.c (server): If not RQ_ROOTLESS, and we haven't gotten a
	Root request, give an error.

1998-10-12  Jim Kingdon

	* version.c: Slide version number to 1.10.3.1.

	* Version 1.10.3.

	* sanity.sh (modules2-17): Update for 9 Oct 1998 change to
	update_dirent_proc.

1998-10-11  Jim Kingdon

	* commit.c (checkaddfile, commit_fileproc): A numeric value for
	'tag' does not mean that we are adding on a branch.
	* sanity.sh (keywordlog): Adjust this test, to test for this
	(replaces comment saying we should be doing it).
	(rmadd): Likewise.

	* sanity.sh (rmadd): New test, tests for various existing
	behaviors with "cvs ci -r".

1998-10-09  Jim Kingdon

	* update.c (update_dirent_proc): For local CVS, if the directory
	does not exist in the working directory nor in the repository,
	just skip it.
	* sanity.sh (dirs): New tests dirs-3a, dirs-7 and dirs-8 test for