@@ -1,5 +1,8 @@
 1998-10-19  Jim Kingdon
 
+	* sanity.sh (multiroot3): New test, tests for a few more
+	multiroot cases.
+
 	* lock.c (lock_name): Set the permissions on each directory we
 	create to that of the parent directory.
 	* sanity.sh (lockfiles): New chmod and tests lockfiles-7a and
